[deploy] Editor overflow fix (#8252)
* flare tag line height

* .

* fix

--- a/app/assets/stylesheets/views/article-form.scss
+++ b/app/assets/stylesheets/views/article-form.scss
@@ -161,6 +161,7 @@
       flex: 1 auto;
       font-size: var(--fs-l);
       font-family: var(--ff-accent);
+      overflow: hidden;
     }
   }
 
